--- a/gumballs/joshua_richardson/wk7d1/todo_app/index.html
+++ b/gumballs/joshua_richardson/wk7d1/todo_app/index.html
@@ -12,7 +12,8 @@
 
   </ul>
 
-  <script src="todo.js"></script>
+  <script type="text/javascript" src="todo3.js"></script>
+  <script type="text/javascript" src="js/jquery-1.11.1.js"></script>
 
 </body>
 </html>
