--- a/gumballs/vasko_traikovski/07-jquery/todo_app2/todo_app/index.html
+++ b/gumballs/vasko_traikovski/07-jquery/todo_app2/todo_app/index.html
@@ -11,11 +11,14 @@
 
 </head>
 <body>
+<h1>To Do</h1>
 <input type="text" id="new-task" value="do something">
 <button id="add-task">Add Task</button>
  <ul id="todo-list">
 
  </ul>
+<script src="jquery.js"></script>
+
 <script src="todo.js"></script>
 </body>
 </html>
